--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="hero">
-    <div class="container">
-      <h1>Quality Construction Services</h1>
-      <p>Building your dreams with excellence since 2005.</p>
-      <a href="contact.html" class="btn">Get a Quote</a>
-    </div>
-  </section>
-
+<!-- Hero Section -->
+<section class="hero" style="background-image: url('images/background-image.jpg');">
+  <div class="container">
+    <h1>Quality Construction Services</h1>
+    <p>Building your dreams with excellence since 2005.</p>
+  </div>
+</section>
+  
   <!-- Services Preview -->
   <section class="services-overview">
     <div class="container">
