--- a/index.html
+++ b/index.html
@@ -32,6 +32,27 @@
   </div>
 </section>
   
+   <!-- Featured Projects -->
+  <section class="projects-overview">
+    <div class="container">
+      <h2>Featured Projects</h2>
+      <div class="grid">
+        <div class="project">
+          <img src="images/background-image" alt="आशिर्वाद अपार्टमेंट">
+          <h4>Luxury Apartments</h4>
+        </div>
+        <div class="project">
+          <img src="images/project2.jpg" alt="Project 2">
+          <h4>Sky is the Limit</h4>
+        </div>
+        <div class="project">
+          <img src="images/project3.jpg" alt="Project 3">
+          <h4>Row Houses</h4>
+        </div>
+      </div>
+      <a href="projects.html" class="btn">View All Projects</a>
+    </div>
+  </section>
   <!-- Services Preview -->
   <section class="services-overview">
     <div class="container">
@@ -53,28 +74,6 @@
           <p>Updating spaces with style and function.</p>
         </div>
       </div>
-    </div>
-  </section>
-
-  <!-- Featured Projects -->
-  <section class="projects-overview">
-    <div class="container">
-      <h2>Featured Projects</h2>
-      <div class="grid">
-        <div class="project">
-          <img src="images/project1.jpg" alt="Project 1">
-          <h4>Luxury Villa</h4>
-        </div>
-        <div class="project">
-          <img src="images/project2.jpg" alt="Project 2">
-          <h4>Office Complex</h4>
-        </div>
-        <div class="project">
-          <img src="images/project3.jpg" alt="Project 3">
-          <h4>Retail Space</h4>
-        </div>
-      </div>
-      <a href="projects.html" class="btn">View All Projects</a>
     </div>
   </section>
 
