--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h2>Featured Projects</h2>
       <div class="grid">
         <div class="project">
-          <img src="images/background-image" alt="आशिर्वाद अपार्टमेंट">
+          <img src="images/background-image.jpg" alt="आशिर्वाद अपार्टमेंट">
           <h4>Luxury Apartments</h4>
         </div>
         <div class="project">
