--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
       <div class="grid">
         <div class="project">
           <img src="images/aashirwad.jpg" alt="आशिर्वाद अपार्टमेंट">
-          <h4>Luxury Apartments</h4>
+          <h4>"आशिर्वाद अपार्टमेंट"</h4>
         </div>
         <div class="project">
-          <img src="images/project2.jpg" alt="Project 2">
-          <h4>Sky is the Limit</h4>
+          <img src="images/girganga.jpg" alt="गिरगंगा अपार्टमेंट ">
+          <h4>गिरगंगा अपार्टमेंट</h4>
         </div>
         <div class="project">
           <img src="images/project3.jpg" alt="Project 3">
