--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <!-- Header + Navigation -->
   <header>
     <div class="container">
-      <a href="index.html" class="logo">Yog Construction</a>
+     <a href="index.html" class="logo">
+        <img src="images/logo.png" alt="Shreeyog Builders Logo" />
+    </a>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
