--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container">
      <a href="index.html" class="logo">
-        <img src="images/logo.png" alt="" />
+        <img src="images/YogLogo.png" alt="Yog Costruction" />
     </a>
       <nav>
         <ul>
