--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="projects.html">Projects</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#projects">Projects</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -35,7 +35,7 @@
 </section>
   
    <!-- Featured Projects -->
-  <section class="projects-overview">
+  <section id="projects" class="projects-overview">
     <div class="container">
       <h2>Featured Projects</h2>
       <div class="grid">
@@ -56,7 +56,7 @@
     </div>
   </section>
   <!-- Services Preview -->
-  <section class="services-overview">
+  <section id="services" class="services-overview">
     <div class="container">
       <h2>Our Services</h2>
       <div class="grid">
