--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <!-- Hero Section -->
 <section class="hero" style="background-image: url('images/background-image.jpg');">
   <div class="container">
-    <h1>Quality Construction Services</h1>
-    <p>Building your dreams with excellence since 2005.</p>
+    <h1>Building with Balance & Strength</h1>
+    <p>Yog Construction: We build spaces that breathe, flow, and last</p>
   </div>
 </section>
   
