--- a/index.html
+++ b/index.html
@@ -26,13 +26,20 @@
   </header>
 
   <!-- Hero Section -->
-<!-- Hero Section -->
-<section class="hero" style="background-image: url('images/background-image.jpg');">
-  <div class="container">
-    <h1>Building with Balance & Strength</h1>
-    <p>Yog Construction: We build spaces that breathe, flow, and last</p>
-  </div>
-</section>
+  <section class="hero-slider">
+    <!-- Tagline Banner in Hero -->
+    <div class="hero-topbar">
+      <div class="hero-text">
+        <h1>Building with Balance & Strength</h1>
+        <p>og Construction: We build spaces that breathe, flow, and last</p>
+      </div>
+    </div>
+
+    <!-- Background Slides -->
+    <div class="slide active" style="background-image: url('images/highrise.jpg');"></div>
+    <div class="slide" style="background-image: url('images/yoga.png');"></div>
+    <div class="slide" style="background-image: url('images/livingspace.png');"></div>
+  </section>
   
    <!-- Featured Projects -->
   <section id="projects" class="projects-overview">
