--- a/index.html
+++ b/index.html
@@ -8,33 +8,32 @@
 </head>
 <body>
   <!-- Header + Navigation -->
-  <header>
-    <div class="container">
-     <a href="index.html" class="logo">
-        <img src="images/YogLogo.png" alt="Yog Costruction" />
-    </a>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <!-- Hero Section -->
-  <section class="hero-slider">
-    <!-- Tagline Banner in Hero -->
-    <div class="hero-topbar">
-      <div class="hero-text">
+ <header>
+  <div class="container header-flex">
+    <div class="logo-group">
+      <a href="index.html" class="logo">
+        <img src="images/YogLogo.png" alt="Yog Construction" />
+      </a>
+      <div class="tagline">
         <h1>Building with Balance & Strength</h1>
         <p>og Construction: We build spaces that breathe, flow, and last</p>
       </div>
     </div>
+    
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
+  <!-- Hero Section -->
+  <section class="hero-slider">
     <!-- Background Slides -->
     <div class="slide active" style="background-image: url('images/highrise.jpg');"></div>
     <div class="slide" style="background-image: url('images/yoga.png');"></div>
