--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </a>
       <div class="tagline">
         <h1>Building with Balance & Strength</h1>
-        <p>og Construction: We build spaces that breathe, flow, and last</p>
+        <p>Yog Construction: We build spaces that breathe, flow, and last</p>
       </div>
     </div>
     
