--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <p>Yog Construction: We build spaces that breathe, flow, and last</p>
       </div>
     </div>
-    
+      <!-- Hamburger Button -->
+    <button class="menu-toggle" id="menuToggle">&#9776;</button>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
