--- a/index.html
+++ b/index.html
@@ -132,7 +132,11 @@
       </div>
     </div>
   </footer>
-
+   <script>
+  document.getElementById('menuToggle').addEventListener('click', function () {
+    document.getElementById('mainNav').classList.toggle('active');
+  });
+</script>
   <script src="scripts.js"></script>
 </body>
 </html>
