--- a/index.html
+++ b/index.html
@@ -9,27 +9,31 @@
 <body>
   <!-- Header + Navigation -->
  <header>
-  <div class="container header-flex">
+  <div class="top-header">
     <div class="logo-group">
       <a href="index.html" class="logo">
-        <img src="images/YogLogo.png" alt="Yog Construction" />
+        <img src="images/YogLogo.png" alt="Yog Construction Logo" />
       </a>
       <div class="tagline">
-        <h1>Building with Balance & Strength</h1>
+        <h1>Yog Construction</h1>
+        <p>Where mindfulness meets structure</p>
       </div>
     </div>
-      <!-- Hamburger Button -->
+
+    <!-- Hamburger for Mobile -->
     <button class="menu-toggle" id="menuToggle">&#9776;</button>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
   </div>
+
+  <!-- Navigation -->
+  <nav id="mainNav">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 </header>
 
   <!-- Hero Section -->
