--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
   <!-- Hero Section -->
   <section class="hero-slider">
     <!-- Background Slides -->
-    <div class="slide active" style="background-image: url('images/highrise.jpg');"></div>
-    <div class="slide" style="background-image: url('images/yoga.png');"></div>
-    <div class="slide" style="background-image: url('images/livingspace.png');"></div>
+    <div class="slide active" style="background-image: url('images/background-image.jpg');"></div>
+    <div class="tagline">
+      <h1>Building with Balance & Strength  </h1>
+    </div>
   </section>
   
    <!-- Featured Projects -->
@@ -54,8 +55,8 @@
           <h4>गिरगंगा अपार्टमेंट</h4>
         </div>
         <div class="project">
-          <img src="images/project3.jpg" alt="Project 3">
-          <h4>Row Houses</h4>
+          <img src="images/houses.png" alt="Project 3">
+          <h4>Dream Homes</h4>
         </div>
       </div>
       <a href="projects.html" class="btn">View All Projects</a>
@@ -67,7 +68,7 @@
       <h2>Our Services</h2>
       <div class="grid">
         <div class="service">
-          <img src="images/house.jpg" alt="Residential">
+          <img src="images/livingspace.png" alt="Residential">
           <h3>Residential Construction</h3>
           <p>Modern homes built to perfection.</p>
         </div>
@@ -77,7 +78,7 @@
           <p>Robust structures for businesses.</p>
         </div>
         <div class="service">
-          <img src="images/renovation.jpg" alt="Renovation">
+          <img src="images/renovate.jpg" alt="Renovation">
           <h3>Renovation & Remodeling</h3>
           <p>Updating spaces with style and function.</p>
         </div>
