--- a/projects/aashirwad.html
+++ b/projects/aashirwad.html
@@ -90,7 +90,7 @@
   <section id="viewer">
     <h2>Interactive 3D Apartment Viewer</h2>
     <p>Walk through your future home virtually!</p>
-    <iframe src="https://kunalpotdar.github.io/houseinmeta/#project4"></iframe>
+    <iframe src="../src/main-ext.html" title="3D Viewer"></iframe>
   </section>
 
 <section style="background-color: #f4f4f4;">
