--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li><a href="#aboutus">About</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#services">Services</a></li>
-      <li><a href="#services">Awards</a></li>
+      <li><a href="#awards">Awards</a></li>
       <li><a href="#contactus" class="nav-button">Contact Us</a></li>
     </ul>
   </nav>
@@ -101,7 +101,7 @@
   </section>
 
   <!-- Testimonials -->
-  <section class="testimonials">
+  <section  id="awards" class="awards">
     <div class="container">
       <h2>What Clients Say</h2>
       <div class="testimonial-slider">
