--- a/src/main-ext.html
+++ b/src/main-ext.html
@@ -20,17 +20,22 @@
 </head>
 <body>
     <div id="floorPanel" class="panel">
-       <button class="floorBtn" onclick="showFloorOptions(4)" onmouseover="highlightFloor(4)" onmouseout="resetHighlight()">Top</button>
-       <button class="floorBtn" onclick="showFloorOptions(3)" onmouseover="highlightFloor(3)" onmouseout="resetHighlight()">2nd</button>
-       <button class="floorBtn" onclick="showFloorOptions(2)" onmouseover="highlightFloor(2)" onmouseout="resetHighlight()">1st</button>
-       <button class="floorBtn" onclick="showFloorOptions(1)" onmouseover="highlightFloor(1)" onmouseout="resetHighlight()">G</button>
+       <button class="floorBtn" onclick="showFloorOptions(5)" >Top</button>
+       <button class="floorBtn" onclick="showFloorOptions(4)" >3rd</button>
+       <button class="floorBtn" onclick="showFloorOptions(3)" >2nd</button>
+       <button class="floorBtn" onclick="showFloorOptions(2)" >1st</button>
+       <button class="floorBtn" onclick="showFloorOptions(1)" >G</button>
     </div>
     <div id="floorOptionsPanel">
       <h4 id="floorLabel" style="color: white; font-size: 18px;">View Apartments</h4>
       <button class="floorBtn" onclick="showApartmentPopup('A-102', '2 BHK', '1200 sqft')">Apartment 1</button><br>
-      <button class="floorBtn" onclick="showApartmentPopup('A-202', '4 BHK', '1600 sqft')">Apartment 2</button><br>
+      <button class="floorBtn" onclick="showApartmentPopup('A-202', '2 BHK', '1600 sqft')">Apartment 2</button><br>
       <button class="floorBtn" onclick="showApartmentPopup('A-302', '2 BHK', '1200 sqft')">Apartment 3</button><br>
-      <button class="floorBtn" onclick="showApartmentPopup('A-402', '4 BHK', '1650 sqft')">Apartment 4</button><br>
+      <button class="floorBtn" onclick="showApartmentPopup('A-402', '2 BHK', '1650 sqft')">Apartment 4</button><br>
+      <button class="floorBtn" onclick="showApartmentPopup('A-502', '2 BHK', '1650 sqft')">Apartment 5</button><br>
+      <button class="floorBtn" onclick="showApartmentPopup('A-602', '2 BHK', '1650 sqft')">Apartment 6</button><br>
+      <button class="floorBtn" onclick="showApartmentPopup('A-702', '2 BHK', '1650 sqft')">Apartment 7</button><br>
+      <button class="floorBtn" onclick="showApartmentPopup('A-802', '2 BHK', '1650 sqft')">Apartment 8</button><br>
       <button class="floorBtn" onclick="hideFloorOptions()">Close</button>
     </div>
         <!-- Popup (Hidden by Default) -->
@@ -60,7 +65,7 @@
             
           function openApartmentPage(apartmentId) {
             // Pass the ID via URL
-            window.location.href = `apartment_view.html?id=${apartmentId}`;
+            window.location.href = `apartment360.html?id=${apartmentId}`;
           }
 
           function openApartment2DPage(apartmentId) {
