--- a/index.html
+++ b/index.html
@@ -49,43 +49,56 @@
    <!-- Featured Projects -->
   <section id="projects" class="projects-overview">
     <div class="container">
-      <h2>Featured Projects</h2>
+      <div class="featured-title-wrap" style="text-align:center;">
+        <h2 class="featured-title">Featured Projects</h2>
+      </div>
       <div class="grid">
-        <a href="projects/aashirwad.html" class="project" target="_blank" rel="noopener">
-        <img src="images/aashirwad.jpg" alt="Aashirwad Apartment" />
-        <h4>“आशिर्वाद अपार्टमेंट”</h4>
-        </a>
+        <div class="project project-innovative" tabindex="0">
+          <img src="images/aashirwad.jpg" alt="Aashirwad Apartment" />
+          <div class="project-info">
+            <h4>“आशिर्वाद अपार्टमेंट”</h4>
+            <button class="fab-explore" onclick="window.open('projects/aashirwad.html', '_blank')">Explore Now</button>
+          </div>
+        </div>
         <div class="project">
           <img src="images/girganga.jpg" alt="गिरगंगा अपार्टमेंट ">
-          <h4>गिरगंगा अपार्टमेंट</h4>
+          <div class="project-info">
+            <h4>गिरगंगा अपार्टमेंट</h4>
+            <button class="fab-explore">Coming Soon</button>
+          </div>
         </div>
         <div class="project">
           <img src="images/houses.png" alt="Project 3">
-          <h4>Twin Bunglows</h4>
+          <div class="project-info">
+            <h4>Twin Bunglows</h4>
+            <button class="fab-explore">Coming Soon</button>
+          </div>
         </div>
       </div>
-      <a href="projects.html" class="btn">View All Projects</a>
     </div>
   </section>
   <!-- Services Preview -->
-  <section id="services" class="services-overview">
+  <section id="services" class="services-overview" style="margin-top:0;">
     <div class="container">
-      <h2>Our Services</h2>
-      <div class="grid">
-        <div class="service">
-          <img src="images/livingspace.png" alt="Residential">
-          <h3>Residential Construction</h3>
-          <p>Modern homes built to perfection.</p>
+      <h2 style="text-align:center;">Our Services</h2>
+      <p style="text-align:center; max-width:600px; margin:0 auto 2rem auto; color:#555;">
+        We offer a comprehensive suite of construction services to meet your needs, whether you're building your dream home, expanding your business, or revitalizing an existing space.
+      </p>
+      <div class="grid" style="gap:2.5rem;">
+        <div class="service" style="background:#fff; border-radius:16px; box-shadow:0 2px 12px rgba(0,0,0,0.07); padding:2rem 1.5rem; transition:box-shadow 0.2s; text-align:center;">
+          <img src="images/livingspace.png" alt="Residential" style="height:100px; margin-bottom:1rem; display:block; margin-left:auto; margin-right:auto;">
+          <h3 style="margin-bottom:0.5rem;">Residential Construction</h3>
+          <p style="color:#666;">Modern homes built to perfection, tailored to your lifestyle and comfort.</p>
         </div>
-        <div class="service">
-          <img src="images/commercial.jpg" alt="Commercial">
-          <h3>Commercial Projects</h3>
-          <p>Robust structures for businesses.</p>
+        <div class="service" style="background:#fff; border-radius:16px; box-shadow:0 2px 12px rgba(0,0,0,0.07); padding:2rem 1.5rem; transition:box-shadow 0.2s; text-align:center;">
+          <img src="images/commercial.jpg" alt="Commercial" style="height:100px; margin-bottom:1rem; display:block; margin-left:auto; margin-right:auto;">
+          <h3 style="margin-bottom:0.5rem;">Commercial Projects</h3>
+          <p style="color:#666;">Robust, functional structures for businesses and organizations of all sizes.</p>
         </div>
-        <div class="service">
-          <img src="images/renovate.jpg" alt="Renovation">
-          <h3>Renovation & Remodeling</h3>
-          <p>Updating spaces with style and function.</p>
+        <div class="service" style="background:#fff; border-radius:16px; box-shadow:0 2px 12px rgba(0,0,0,0.07); padding:2rem 1.5rem; transition:box-shadow 0.2s; text-align:center;">
+          <img src="images/renovate.jpg" alt="Renovation" style="height:100px; margin-bottom:1rem; display:block; margin-left:auto; margin-right:auto;">
+          <h3 style="margin-bottom:0.5rem;">Renovation & Remodeling</h3>
+          <p style="color:#666;">Transform and update spaces with style, efficiency, and lasting value.</p>
         </div>
       </div>
     </div>
@@ -134,6 +147,10 @@
           <li><a href="#">LinkedIn</a></li>
           <li><a href="#">Facebook</a></li>
         </ul>
+        <p style="margin-top:1em; font-size:0.95em;">
+          This website is powered by
+          <a href="https://www.houseinmeta.com" target="_blank" rel="noopener" style="color:#ff9800; font-weight:bold;">HouseInMeta</a>
+        </p>
       </div>
     </div>
   </footer>
